# gpd

./: CMakeLists.txt  CMakeLists.txt.short  install_dependencies.sh
cfg/: eigen_params.cfg
gpd_py/: CMakeLists.txt  gpd_py_lib.cpp  gpd_py_wrapper.cpp  test.py
include/gpd/: grasp_detector.h
src/gpd/: grasp_detector.cpp
